update release notes

--- a/doc/99100-MacchinaReleaseNotes.page
+++ b/doc/99100-MacchinaReleaseNotes.page
@@ -1,6 +1,71 @@
 Release Notes
 AAAAMacchinaIO
 
+!!!Release 2021.1
+
+!!Summary of Changes
+
+  - upgraded POCO to release 1.11.0
+  - upgraded OSP and RemotingNG frameworks
+  - MQTT: support for MQTT version 5
+  - JavaScript: new UUID object  
+
+
+!!!Release 2020.1
+
+!!Summary of Changes
+
+  - upgraded POCO to release 1.10.1
+  - updated OSP and Remoting frameworks (see their respective release notes for details)
+  - modernized codebase to use C++14
+  - JavaScript: fixed an unhandled exception in RecordSet.toJSON() if record set is empty
+  - JavaScript: fixed potential memory leaks due to wrong v8::Persistent use in
+    some places
+  - JavaScript: optimized handling of timer callbacks to avoid excessive delays when
+  - stopping a script with 10000s of timers
+  - Bluetooth support (BtLE) has been upgraded to work with current versions of bluepy-helper
+  - BtLE: it's now possible create basic Peripheral devices and use them from JavaScript
+  - Modbus: added ModbusMaster::reset() method
+  - added device interface for cameras
+  - various minor improvements and fixes
+
+
+!!!Release 0.10.0
+
+!!Summary of Changes
+
+  - upgraded POCO to release 1.9.0
+  - OSP: added ServiceListener class (including JS bindings)
+  - OSP: added Bundle-PreventUninstall manifest property
+  - Added various samples
+  - Remoting: added support for std::array and Poco::array
+  - Added support for CAN bus (via Linux SocketCAN)
+  - JS Data binding: added executeNonQuery() method which does not create a RecordSet result
+  - added UnitsOfMeasure service
+  - OSP: added StripBundle utility
+  - OSP Web: improved support for framework-level CSRF/XSRF protection
+  - Web user interface: fix potential XSRF issues
+  - Naming of device services: use port or device ID from config properties instead of index
+  - Various smaller fixes and improvements
+
+
+!!!Release 0.7.0 - Developer Preview 7
+
+!!Summary of Changes
+
+  - upgraded POCO to release 1.7.8p2
+  - Remoting: Added a new framework for authentication and authorization
+  - RemoteGen bugfix: fix: don't generate () for empty default initialization in Skeleton code
+  - RemoteGen bugfix: generate correct code for EventDispatcher and EventSubscriber for classes that inherit events from base classes
+  - OSP: improved error message when starting a bundle fails because a dependency failed to start
+  - JavaScript engine modularization: HTTP and Database classes are now in their own bundles/modules
+  - MQTT/Paho: fix socket leak if connect fails
+  - added UDP/6LoWPAN support
+  - improved Modbus support
+  - improved Bluetooth LE support
+  - added support for Bosch XDK device
+
+
 !!!Release 0.6.0 - Developer Preview 6
 
 !!Summary of Changes
@@ -63,7 +128,7 @@ AAAAMacchinaIO
   - added web-based Console
   - improved JavaScript logger wrapper (support for formatted messages)
   - added JavaScript console object
-  - JavaScript: HTMLForm JavaScript wrapper now has property accessor for fields: 
+  - JavaScript: HTMLForm JavaScript wrapper now has property accessor for fields:
     write form.a instead of form.getField('a') (GH #16)
   - various minor bugfixes and improvements
   - fixed a potential crash when converting a std::string to JavaScript string
@@ -78,10 +143,10 @@ AAAAMacchinaIO
 !!!Release 0.1.0 - Developer Preview 1
 
 This is the first release of macchina.io, released with the intent to get
-early feedback from the IoT developer community. 
+early feedback from the IoT developer community.
 
 macchina.io is still in development. The core platform code is done and
 considered stable (it's based on code having seen heavy production use
-for a few years already). Work leading to 1.0 release focuses on adding 
-additional sensor, device and cloud service interfaces, as well as improving 
+for a few years already). Work leading to 1.0 release focuses on adding
+additional sensor, device and cloud service interfaces, as well as improving
 the existing interfaces.
