--- a/tools/PocoDoc/resources/css/styles.css
+++ b/tools/PocoDoc/resources/css/styles.css
@@ -73,7 +73,7 @@ body
 	line-height: 1.5em;
 }
 
-p, h1, h2, h3, h4, h5, h6, ul, ol, li, td, th, address, blockquote, strong, b, emph, i
+div, p, h1, h2, h3, h4, h5, h6, ul, ol, li, td, th, address, blockquote, strong, b, emph, i
 {
 	font-family: "Trebuchet MS", Geneva, Arial, Helvetica, SunSans-Regular, sans-serif; 
 }
