--- a/platform/doc/99100-ReleaseNotes.page
+++ b/platform/doc/99100-ReleaseNotes.page
@@ -1,6 +1,22 @@
 POCO C++ Libraries Release Notes
 AAAIntroduction
 
+!!!Release 1.11.5
+
+!!Summary of Changes
+
+  - GH #3849: Upgrade bundled libexpat to 2.5.0 [fixes CVE]
+
+
+!!!Release 1.11.4
+
+!!Summary of Changes
+
+  - GH #3805: Upgrade expat to 2.4.9
+  - GH #3846: Upgrade bundled zlib to 1.2.13 [fixes CVE]
+  - GH #3847: Upgrade bundled SQLite to 3.39.4
+
+
 !!!Release 1.11.3
 
 !!Summary of Changes
