--- a/platform/doc/99100-ReleaseNotes.page
+++ b/platform/doc/99100-ReleaseNotes.page
@@ -1,6 +1,16 @@
 POCO C++ Libraries Release Notes
 AAAIntroduction
 
+!!!Release 1.11.6
+
+!!Summary of Changes
+
+  - GH #3147: Reading from request stream hangs when "Transfer-Encoding: chunked" is used
+  - GH #3859: zlib headers not updated
+  - Build system fixes for Xcode on Apple Silicon.
+  - Upgrade bundled SQLite to 3.40.0
+
+
 !!!Release 1.11.5
 
 !!Summary of Changes
